--- a/public/Styles/All.css
+++ b/public/Styles/All.css
@@ -48,3 +48,11 @@
     box-shadow: 0 0 0 0 !important;
     font-size: 15px !important;
 }
+
+/*Custom's Style Template*/
+.background-image-body
+{
+    width: 100% !important;
+    height: 100% !important;
+    background-attachment: unset !important;
+}
